# HelloWorldGrpc

./: .gitignore  BUILD  BUILD.example  CMakeLists.txt  MODULE.bazel  Makefile  README.md  WORKSPACE  run_cmake_tests.sh  run_tests.sh  setup.sh
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml
cli/: BUILD  BUILD.example  client.cc  client.h  main.cc
proto/: BUILD.bazel  helloworld.proto
srv/: BUILD  BUILD.example  main.cc  server.cc  server.h
test/: BUILD  integration_test.cc  ptp_test.cc
test/cli/: BUILD  client_test.cc
test/srv/: BUILD  server_test.cc
yasser/: MODULE.bazel  Makefile  README.md
yasser/client/: BUILD.bazel  main.cc
yasser/proto/: BUILD.bazel  hello.proto
yasser/server/: BUILD.bazel  main.cc
