module(
    name = "helloworld_grpc",
    version = "1.0.0",
)

# Core Bazel dependencies
bazel_dep(name = "rules_proto", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.4.2")

# Protocol Buffers
bazel_dep(name = "com_google_protobuf", version = "25.1")
bazel_dep(name = "rules_proto_grpc", version = "4.4.0")

# gRPC dependencies
bazel_dep(name = "com_github_grpc_grpc", version = "1.60.0")
bazel_dep(name = "upb", version = "0.0.0-20240103-1.1.0")
bazel_dep(name = "re2", version = "2023-12-01")
bazel_dep(name = "abseil-cpp", version = "20240116.2")

# Additional dependencies
bazel_dep(name = "zlib", version = "1.3")
bazel_dep(name = "c-ares", version = "1.20.1")
