module(
    name = "helloworld_grpc",
    version = "1.0.0",
)

# Core Bazel dependencies
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_cc", version = "0.1.4")

# Protocol Buffers and gRPC
bazel_dep(name = "protobuf", version = "26.1")
bazel_dep(name = "grpc", version = "1.62.0")

# Google Test
bazel_dep(name = "googletest", version = "1.14.0")