load("@rules_proto//proto:defs.bzl", "proto_library")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

proto_library(
    name = "hello_proto",
    srcs = ["hello.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "hello_cc_proto",
    deps = [":hello_proto"],
    visibility = ["//visibility:public"],
)

cc_grpc_library(
    name = "hello_grpc_cc_proto",
    srcs = [":hello_proto"],
    grpc_only = True,
    deps = [":hello_cc_proto"],
    visibility = ["//visibility:public"],
)
